# utdee_backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prospector.yaml  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: python-publish.yml
git_hooks/: pre-commit  utils.py
k8s/: utdee-backend-secrets-template.yaml  utdee.yaml
sources/: __init__.py
sources/api/: __init__.py  entry.py  entry_.py  main_page.py  main_page_.py  spark_task.py  spark_task_.py  tasks.py  thread_task.py  thread_task_.py
sources/context/: __init__.py
sources/tasks_manager/: __init__.py  manager.py
sources/tasks_manager/api/: __init__.py  tasks.py
sources/tasks_manager/dispather/: __init__.py  abstract.py  process_pool_based.py  spark_based.py  thread_pool_based.py
sources/utils/: async_generator_descryptor.py  trace.py
tests/fixtures/: forecast_response
tests/test_api/: integration.py  test_entry.py  test_main_page.py  test_task.py  test_thread_task.py
tests/test_context/: test_context.py  test_settings.py
tests/test_git_hooks/: test_utils.py
tests/test_tasks_manager/: test_manager.py
tests/test_utils/: test_async_generator_descryptor.py  test_context_manager.py  test_trace.py
tests/utils/: __init__.py  context_mock_setup.py  patched_responses.py  patches.py
utdee_backend/: __init__.py
utdee_backend/api/: entry_.py  spark_task_.py  thread_task_.py
utdee_backend/context/: __init__.py  settings.py
utdee_backend/db/: mysql.py
utdee_backend/db/orm/: models.py  (+1 more)
utdee_backend/tasks_manager/: __init__.py
utils/: context.py  env_variables.py
(+26 files in other folders)
